istio/istio-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc1
  labels:
    app: svc1
spec:
  ports:
  - port: 50051
    name: grpc
  selector:
    app: svc1
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: svc1-sa
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc1
spec:
  selector:
    matchLabels:
      app: svc1   
  replicas: 1
  template:
    metadata:
      labels:
        app: svc1
    spec:
      serviceAccountName: svc1-sa
      containers:
      - name: myapp-container
        image: docker.io/salrashid123/grpc_stats_envoy_istio:prom
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 50051            
---
