istio/istio-svc1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: svc1-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:      
  - route:
    - destination:
        host: svc1      
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: svc1-destination
spec:
  host: svc1
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL  
    loadBalancer:
      simple: ROUND_ROBIN      
---
